<resources>
    <string name="app_name">HealthInfo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="read_more"><u>read more...</u></string>
    <string name="action_settings">Settings</string>
    <string name="new_username">New username:</string>
    <string name="enter_name">Enter name</string>
    <string name="new_password">New password:</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">Submit</string>
    <string name="title_noti">Enter title</string>
    <string name="msg_noti">Enter message</string>
    <string name="create_noti">Create Notification</string>
    <string name="btn_set_time">Set time</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Log out</string>
    <string name="select_noti_type">Select notification type</string>
    <string name="interval">Interval :</string>
    <string name="daily">Daily</string>
    <string name="hourly">Hourly</string>

    <string-array name="notification_type">
        <item>Weather</item>
        <item>Disease</item>
        <item>Reminder</item>
    </string-array>
</resources>
