<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nhat0.app3002.CreateNotificationActivity"
    tools:showIn="@layout/app_bar_create_notification">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_noti"
            android:id="@+id/noti_title_field"
            android:layout_alignParentStart="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_noti"
            android:id = "@+id/noti_msg_field"
            android:layout_below="@id/noti_title_field"
            android:layout_marginTop="16dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_set_time"
            android:layout_below="@id/noti_msg_field"
            android:id="@+id/btn_set_time"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_select"
            android:layout_below="@id/btn_set_time"
            android:textSize="20sp"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_noti_type"
            android:id="@+id/select_noti_type_label"
            android:layout_below="@id/time_select"
            android:textSize="20sp"/>
        <Spinner
            android:layout_marginTop="8dp"
            android:id="@+id/notification_type_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_noti_type_label"
            ></Spinner>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notification_type_dropdown"
            android:id="@+id/dailyNoti"
            android:text="@string/daily"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@id/dailyNoti"
            android:id="@+id/hourlyNoti"
            android:layout_below="@id/notification_type_dropdown"
            android:text="@string/hourly"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/interval_label"
            android:text="@string/interval"
            android:layout_below="@id/dailyNoti"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:id="@+id/interval"
            android:layout_below="@id/dailyNoti"
            android:layout_toRightOf="@id/interval_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/interval"
            android:id="@+id/interval_unit"
            android:layout_below="@id/dailyNoti"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_noti"
            android:id="@+id/btn_create_noti"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="56dp" />


</RelativeLayout>