<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background ="@color/colorPrimaryDark">
    <TextView android:text="@string/login" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_label"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff7aff24"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/app_label"
        android:layout_below="@id/login_label"
        android:layout_centerHorizontal="true"
        android:textColor="#ff7aff24"
        android:textSize="35dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_field"
        android:hint="@string/enter_name"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ff7eff15"
        android:layout_marginTop="56dp"
        android:layout_below="@id/app_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password_field"
        android:layout_below="@id/name_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColorHint="#ff7eff15"
        android:hint="@string/enter_password"
        android:layout_marginTop="16dp"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:id="@+id/btn_login"
        android:layout_below="@id/password_field" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btn_register"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="8dp"/>
</RelativeLayout>